syntax = "proto3";

import "Messages/CommonTypes.proto";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.TypeTests";

package grpc_server.api.protos.messages.type_tests;

message DictionaryTestDto {
    map<string, string> dictionary_field = 1;
    repeated MapOfStringAndString dictionary_field_collection = 2;
    MapOfStringAndString dictionary_field_nullable = 3;
    ListOfMapOfStringAndString dictionary_field_nullable_collection = 4;
}
